<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asistent</string>
    <string name="launch_name">AI voice assistant</string>
    <string name="google_web_client_id">450308038671-a48i1s1raku2ccl59gpcvhr1ilbrbukd.apps.googleusercontent.com</string>

    <string name="test" translatable="false">test</string>
    <string name="test_id" translatable="false">Chat id</string>
    <string name="test_name" translatable="false">Name</string>
    <string name="test_role" translatable="false">Role</string>
    <string name="test_bot" translatable="false">Bot name</string>
    <string name="test_text" translatable="false">Text</string>
    <string name="test_choose" translatable="false">Choose audio</string>
    <string name="test_chats_info" translatable="false">Chats info</string>
    <string name="test_chat_create" translatable="false">Create chat</string>
    <string name="test_chat_edit" translatable="false">Edit chat</string>
    <string name="test_chat_delete" translatable="false">Delete chat</string>
    <string name="test_chat_get_messages" translatable="false">Get chat messages</string>
    <string name="test_chat_send_text_message" translatable="false">Send text message</string>
    <string name="test_chat_send_audio_message" translatable="false">Send audio message</string>

    <!--  Login & registration  -->
    <string name="sign_in">Sign in</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="email_signing">Email</string>
    <string name="email_example">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_additional">at least 8 symbols</string>
    <string name="dont_remember_password">Forgot your password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="to_sign_up">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_confirm_start">Registration constitutes your agreement to the</string>
    <string name="sign_up_confirm_tu">Terms of Use</string>
    <string name="sign_up_confirm_and">and</string>
    <string name="sign_up_confirm_pp">Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="to_sign_in">Sign in</string>

    <string name="empty_field_error">This field must be not empty</string>
    <string name="password_length_error">Password length should be more than 8 symbols</string>
    <string name="email_type_error">Wrong email type</string>

    <string name="confirm_email_title">Confirm your email</string>
    <string name="confirm_email_body">To confirm your email address, click on the link in the email we sent you.</string>
    <string name="confirm_email_bottom">Didn\'t receive the confirmation email?</string>
    <string name="confirm_email_action">Resend Email</string>

    <string name="pass_rec_title">Forgot your password?</string>
    <string name="pass_rec_body">Don\'t worry, we\'ll send password recovery instructions to your email</string>
    <string name="pass_rec_btn">Send</string>
    <string name="pass_rec_success">Email sent</string>
    <string name="pass_rec_exists">There is no user with this email</string>

    <!--  Choose  -->
    <string name="choose_title">Choose speaker</string>
    <string name="speaker_1">Ales</string>
    <string name="speaker_2">Alesia</string>
    <string name="speaker_3">Alena</string>
    <string name="speaker_4">Boris</string>
    <string name="speaker_5">Kiryl</string>
    <string name="speaker_6">Vasil</string>
    <string name="speaker_7">Vasilina</string>
    <string name="promote_title">Suggest a bot</string>
    <string name="voice_ready">(voice stabilizes)</string>
    <string name="voice_in_progress">(in development)</string>
    <string name="assistant_with_role">Assistants with a choice of role</string>
    <string name="assistant_common">Common assistants</string>

    <string name="donate_title">Help the app get better!</string>
    <string name="donate_sub">Donate a cup of coffee to the developer</string>
    <string name="donate_button">Donate</string>

    <!--  Role  -->
    <string name="role_title">Choose a role</string>
    <string name="role_1">Common assistant</string>
    <string name="role_2">Architect</string>
    <string name="role_3">Business-analyst</string>
    <string name="role_4">Finance consultant</string>
    <string name="role_5">Recruiter</string>
    <string name="role_6">Project-Manager</string>
    <string name="role_7">Legal consultant</string>
    <string name="role_8">Marketing specialist</string>
    <string name="role_9">Realtor</string>
    <string name="role_10">Engineer</string>
    <string name="role_11">Programmer</string>
    <string name="role_12">Teacher</string>
    <string name="role_13">Writer</string>
    <string name="role_additional_1">Прывітанне, я <b>Агульны асістэнт</b>. Як я магу дапамагчы вам?</string>
    <string name="role_additional_2">Прывітанне, я <b>Архітэктар</b>. Гатовы дапамагчы вам з вашымі архітэктурнымі пытаннямі і прадметамі.</string>
    <string name="role_additional_3">Прывітанне, я <b>Бізнэс-аналітык</b>. Як я магу дапамагчы вам?</string>
    <string name="role_additional_4">Прывітанне, я <b>Фінансавы кансультант</b>. Маю глыбокі разуменне ў галіне фінансаў і гатовы дапамагчы вам з планаванне і інвестыцыямі.</string>
    <string name="role_additional_5">Прывітанне, я <b>Рэкруцер</b>. Я - ваш надзейны супрацоўнік у працы па пошуку і адбору найлепшых кандыдатаў. Як я магу дапамагчы вам?</string>
    <string name="role_additional_6">Прывітанне, я <b>Проджэкт-мэнаджар</b>. Я магу дапамагчы над планаваннем, арганізацыяй і кіраваннем вашых праектаў, забяспечваючы паспяховыя вынікі.</string>
    <string name="role_additional_7">Прывітанне, я <b>Юрыдычны кансультант </b>. Як я магу дапамагчы вам?</string>
    <string name="role_additional_8">Прывітанне, я <b>Маркетолаг</b>. Я - ваш надзейны партнёр у стварэнні і выкананні эфектыўных маркетынгавых кампаній. Як я магу дапамагчы вам?</string>
    <string name="role_additional_9">Прывітанне, я <b>Рыелтар</b>. Як я магу дапамагчы вам?</string>
    <string name="role_additional_10">Прывітанне, я <b>Інжынер</b>. Гатовы падтрымаць вас у рашэнні тэхнічных задач і супрацоўнічаць у стварэнні новых тэхналагічных рашэнняў.</string>
    <string name="role_additional_11">Прывітанне, я <b>Праграміст</b>. Я гатовы стаць вашым супрацоўнікам і супольна адкрываць новыя горы ў сферы тэхналогій.</string>
    <string name="role_additional_12">Прывітанне, я <b>Настаўнік</b>. Як я магу дапамагчы вам?</string>
    <string name="role_additional_13">Прывітанне, я <b>Пісьменнік</b>. Я гатовы дапамагчы вам з ідэямі, развіццём сюжэтаў і стварэннем непаўторных літаратурных шэдэўраў.</string>

    <!--  Settings  -->
    <string name="settings_title">Settings</string>
    <string name="dark_theme">Night mode</string>
    <string name="log_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="language">Language</string>
    <string name="be">Беларуская</string>
    <string name="en">English</string>
    <string name="ru">Русский</string>
    <string name="zh">中文</string>

    <string name="sign_out_title">Are you sure you want to sign out?</string>
    <string name="sign_out_body">All your data, including chat history, will be saved</string>
    <string name="sign_out_yes">Sign out</string>
    <string name="sign_out_no">Cancel</string>

    <string name="delete_title">Are you sure you want to delete your account?</string>
    <string name="delete_body">All your data will be deleted, and chat history will not be saved</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>

    <!--  Contacts  -->
    <string name="contacts_title">Contacts</string>
    <string name="if_you_have_questions">If you have questions or suggestions, please contact us</string>
    <string name="email_title">E-mail:</string>
    <string name="email">hello@asistent.by</string>
    <string name="address_title">Address:</string>
    <string name="address">220012, Minsk, st. Surganova, 6, room 422,430 and 432</string>
    <string name="phone_numbers_title">Phone numbers:</string>
    <string name="phone_number_1">+375 (17) 379–21–26</string>
    <string name="phone_number_2">+375 (17) 379–25–22</string>
    <string name="phone_room_1">(room 430)</string>
    <string name="phone_room_2">(room 432)</string>

    <!--  Chat  -->
    <string name="chat_record_plug">00:00</string>
    <string name="enter_message">Enter the request…</string>
    <string name="text_copied">Text copied!</string>
    <string name="share_text_1">Look at the interesting answer the bot gave me</string>
    <string name="share_text_2">in the app</string>
    <string name="share_using">Share via…</string>
    <string name="thanks">Thanks!</string>

    <!--  Chat Client  -->
    <string name="null_uid" translatable="false">UID is null</string>
    <string name="array_is_empty" translatable="false">Array is empty</string>
    <string name="chat_info_is_empty" translatable="false">Chat info is empty</string>
    <string name="something_went_wrong" translatable="false">Something went wrong, check your fields</string>
    <string name="error_uploading_audio" translatable="false">Audio haven\'t been loaded</string>
    <string name="file_isnt_chosen" translatable="false">File isn\'t chosen</string>

</resources>