<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contacts_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/if_you_have_questions"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"

        android:gravity="start"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/email_title"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:gravity="start"

        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_questions"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/email"
        android:textColor="@color/ripple_fragments_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:clickable="true"
        android:focusable="true"

        android:gravity="start"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_email_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/address_title"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:gravity="start"

        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_email"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/address"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:gravity="start"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_address_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_phones_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/phone_numbers_title"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:gravity="start"

        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_address"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_phone_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/phone_number_1"
        android:textColor="@color/ripple_fragments_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:clickable="true"
        android:focusable="true"

        android:gravity="start"

        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_phones_title"/>

    <TextView
        android:id="@+id/contacts_phone_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/phone_number_2"
        android:textColor="@color/ripple_fragments_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:clickable="true"
        android:focusable="true"

        android:gravity="start"

        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_phone_1"/>

    <TextView
        android:id="@+id/contacts_phone_1_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/phone_room_1"
        android:textSize="16sp"
        android:textColor="@color/secondary_text"
        android:fontFamily="@font/roboto"

        android:gravity="start"

        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toEndOf="@id/contacts_phone_1"
        app:layout_constraintTop_toTopOf="@id/contacts_phone_1"
        app:layout_constraintBottom_toBottomOf="@id/contacts_phone_1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contacts_phone_2_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/phone_room_2"
        android:textSize="16sp"
        android:textColor="@color/secondary_text"
        android:fontFamily="@font/roboto"

        android:gravity="start"

        android:layout_marginHorizontal="16dp"

        app:layout_constraintStart_toEndOf="@id/contacts_phone_2"
        app:layout_constraintTop_toTopOf="@id/contacts_phone_2"
        app:layout_constraintBottom_toBottomOf="@id/contacts_phone_2"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>