<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:showText="false"
        app:splitTrack="false"

        app:trackTint="@color/switch_track"
        app:thumbTint="@color/switch_thumb"

        app:useMaterialThemeColors="false"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/settings_theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/dark_theme"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"

        android:layout_marginStart="16dp"

        app:layout_constraintTop_toTopOf="@id/settings_theme_switch"
        app:layout_constraintBottom_toBottomOf="@id/settings_theme_switch"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/settings_language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/language"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"

        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/settings_theme_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/settings_language_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/settings_language_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/settings_language_be"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:buttonTint="@color/radio_primary"

            android:text="@string/be"
            android:textSize="16sp"
            android:textColor="@color/secondary_text"
            android:textStyle="normal"
            android:fontFamily="@font/roboto"

            android:paddingHorizontal="16dp"/>

        <RadioButton
            android:id="@+id/settings_language_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:buttonTint="@color/radio_primary"

            android:text="@string/en"
            android:textSize="16sp"
            android:textColor="@color/secondary_text"
            android:textStyle="normal"
            android:fontFamily="@font/roboto"

            android:paddingHorizontal="16dp"/>

        <RadioButton
            android:id="@+id/settings_language_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:buttonTint="@color/radio_primary"

            android:text="@string/ru"
            android:textSize="16sp"
            android:textColor="@color/secondary_text"
            android:textStyle="normal"
            android:fontFamily="@font/roboto"

            android:paddingHorizontal="16dp"/>

        <RadioButton
            android:id="@+id/settings_language_zh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:buttonTint="@color/radio_primary"

            android:text="@string/zh"
            android:textSize="16sp"
            android:textColor="@color/secondary_text"
            android:textStyle="normal"
            android:fontFamily="@font/roboto"

            android:paddingHorizontal="16dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/settings_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/delete_account"
        android:textColor="@color/ripple_fragments_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:clickable="true"
        android:focusable="true"

        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/settings_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/log_out"
        android:textColor="@color/ripple_fragments_text"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"

        android:clickable="true"
        android:focusable="true"

        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintBottom_toTopOf="@id/settings_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>