<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:ignore="ContentDescription"

    android:background="@color/transparent"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_lang_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/background_dialog"
        android:elevation="4dp"

        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/dialog_lang_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_lang_dialog"

            android:layout_marginTop="24dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/dialog_lang_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_lang_ic"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioButton
                android:id="@+id/dialog_lang_be"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/radio_primary"

                android:text="@string/be"
                android:textSize="16sp"
                android:textColor="@color/dialog_text_primary"
                android:fontFamily="@font/roboto"

                android:paddingHorizontal="16dp" />

            <RadioButton
                android:id="@+id/dialog_lang_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/radio_primary"

                android:text="@string/en"
                android:textSize="16sp"
                android:textColor="@color/dialog_text_primary"
                android:fontFamily="@font/roboto"

                android:layout_marginTop="4dp"

                android:paddingHorizontal="16dp" />

            <RadioButton
                android:id="@+id/dialog_lang_ru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/radio_primary"

                android:text="@string/ru"
                android:textSize="16sp"
                android:textColor="@color/dialog_text_primary"
                android:fontFamily="@font/roboto"

                android:layout_marginTop="4dp"

                android:paddingHorizontal="16dp" />

            <RadioButton
                android:id="@+id/dialog_lang_zh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@color/radio_primary"

                android:text="@string/zh"
                android:textSize="16sp"
                android:textColor="@color/dialog_text_primary"
                android:fontFamily="@font/roboto"

                android:layout_marginTop="4dp"

                android:paddingHorizontal="16dp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>