<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:ignore="ContentDescription"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_conf_bottom_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:visibility="invisible"

        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/email_conf_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/confirm_email_bottom"
            android:textSize="14sp"
            android:textColor="@color/secondary_text_lighter"
            android:fontFamily="@font/roboto"

            android:gravity="center"

            android:layout_marginTop="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/email_conf_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/confirm_email_action"
            android:textSize="14sp"
            android:textColor="@color/ripple_fragments_text"
            android:fontFamily="@font/roboto"

            android:gravity="center"
            android:clickable="true"
            android:focusable="true"

            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_conf_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_conf_bottom_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/email_conf_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_message_sent"

            android:layout_marginTop="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/email_conf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/confirm_email_title"
            android:textSize="24sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"

            android:gravity="center"

            android:layout_marginTop="24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_conf_image"/>

        <TextView
            android:id="@+id/email_conf_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/confirm_email_body"
            android:textColor="@color/secondary_text_lighter"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"

            android:gravity="center"

            android:layout_marginVertical="16dp"

            app:layout_constraintTop_toBottomOf="@id/email_conf_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>